- Added createFeedbacksInBulk - Added retrieveProductStatistics - Updated swagger.yaml
