# src/routes/feedback.routes.ts
@@ -1,5 +1,5 @@
 import express from 'express';
-import { getAllFeedbacks, addFeedback } from '../controllers/feedback.controller';
+import { getAllFeedbacks, createFeedback } from '../controllers/feedback.controller';
 
 const router = express.Router();
 
@@ -14,6 +14,6 @@ router.get('/feedback', getAllFeedbacks); // Get all feedbacks
  * Allows users to submit new feedback.
  * This route expects a request body containing user_id and feedback_text.
  */
-router.post('/feedback', addFeedback); // Create new feedback
+router.post('/feedback', createFeedback); // Create new feedback
 
 export default router;
